samples/_failures_safe/1761792261_cb831f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3b844085.c: In function ‘main’:
./samples/SAFE/__tmp_3b844085.c:131:54: error: expected ‘;’ at end of input
  131 |     if (!read_size_t("Enter cols: ", &cols)) { printf
      |                                                      ^
      |                                                      ;
./samples/SAFE/__tmp_3b844085.c:131:5: error: expected declaration or statement at end of input
  131 |     if (!read_size_t("Enter cols: ", &cols)) { printf
      |     ^~
./samples/SAFE/__tmp_3b844085.c:131:5: error: expected declaration or statement at end of input
